--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	<img src="intimacy4.jpg" width="900" height="725"/>
 	<img src="intimacy5.jpg" width="900" height="725"/>
 	<img src="intimacy6.jpg" width="900" height="725"/>
-	<img src="intimacy7.JPG" width="900" height="725"/>
+	<img src="intimacy7.jpg" width="900" height="725"/>
 	<img src="intimacy8.jpg" width="900" height="725"/>
 	<img src="intimacy9.jpg" width="900" height="725"/>
 	<img src="intimacy10.jpg" width="900" height="725"/>
@@ -57,6 +57,7 @@
 </td></tr></table>
 	<div class="blog"><h3><span style="font-size: 20px;">W</span>ELCOME TO <span style="font-size: 20px;">A</span>RTHROPUNK</h3>
 	<p class="nomargin">
+	<i>~September 2018~</i><br/><br>Guys. I just got back to New York from the Small Press Expo. And my goodness. If you haven't been, go. Life-affirming. <a href="intimacy1.html">"Intimacy"</a>, <a href="never1.html">"Never Never Never Never Never"</a>, and <a href="two-anatomies-of-loneliness.html">"Two Anatomies of Loneliness"</a> all made appearances and I couldn't be happier!<br/><br/><br/>
 	<i>~July 2018~</i><br/><br>We're back with a new comic and its a bit of an Arthrobomb, the seventeen page, sixty-four panel <a href="comics.html#intimacy">"Intimacy"</a>. While I have enjoyed making this comic, I promise this will be the last color comic produced with what I call my "field setup", and I intend to be shifting to a less spartan approach once I'm more sedentary and as I prepare work on the next series of comics.<br/><br/>As you may have surmised the "All My Friends Are Machines" is on idefinite hiatus. Frankly, I was bored with the story and I've decided to shift and work on other long-form stories featuring the same characters. While I prepare that story, I'll pop back in now and then with more <a href="comics.html#dailies">dailies</a><br/><br/>Much thanks and much love!<br/><br/><br/>
 	<i>~April 2018~</i><br/><br/>The hiatus is finally broken, but updates for <a href="comics.html#all-my-friends-are-machines">"All My Friends Are Machines"</a> won't be coming back for a while. I'm going to be focusing on little projects for a bit, for example <a href="two-anatomies-of-loneliness.html">"Two Anatomies of Loneliness"</a> and an Arthropunk story called "Intimacy". Check back soon for more comics!<br/><br/><br/>
 	<i>~February 2018~</i><br/><br/>Quick little update: it is Chinese New Year, and I am in China. Updates are on hold until festivities conclude. Happy year of the dog!<br/><br/><br/>
