--- a/index.html
+++ b/index.html
@@ -38,26 +38,17 @@
 	</div><table class="homepage"><tr>
 	<td style="text-align: right;"><h1></h1><a href="comics.html#intimacy"><img src="newest.PNG" alt="NEWEST COMIC:" width="230px" height="50px"/></a><br/><br/><br/><a href="two-anatomies-of-loneliness.html"><img src="prev.jpg" alt="previous" width="120px" height="32px"/></a><br/><br/><!-- <a href="all-my-friends-are-machines1.html"><img src="first.PNG" alt="first" width="70px" height="36px"/> --></a></td>
 <td>
-	<img src="intimacy1.jpg" width="900" height="725"/>
-	<img src="intimacy2.jpg" width="900" height="725"/>
-	<img src="intimacy3.jpg" width="900" height="725"/>
-	<img src="intimacy4.jpg" width="900" height="725"/>
-	<img src="intimacy5.jpg" width="900" height="725"/>
-	<img src="intimacy6.jpg" width="900" height="725"/>
-	<img src="intimacy7.jpg" width="900" height="725"/>
-	<img src="intimacy8.jpg" width="900" height="725"/>
-	<img src="intimacy9.jpg" width="900" height="725"/>
-	<img src="intimacy10.jpg" width="900" height="725"/>
-	<img src="intimacy11.jpg" width="900" height="725"/>
-	<img src="intimacy12.jpg" width="900" height="725"/>
-	<img src="intimacy13.jpg" width="900" height="725"/>
-	<img src="intimacy14.jpg" width="900" height="725"/>
-	<img src="intimacy15.jpg" width="900" height="725"/>
-	<img src="intimacy16.jpg" width="900" height="725"/>
-	<img src="intimacy17.jpg" width="900" height="360"/>
+	<img src="Armstrong0.png" width="725" height="900"/>
+	<img src="Armstrong1.png" width="725" height="900"/>
+	<img src="Armstrong2.png" width="725" height="900"/>
+	<img src="Armstrong3.png" width="725" height="900"/>
+	<img src="Armstrong4.png" width="725" height="900"/>
+	<img src="Armstrong5.png" width="725" height="900"/>
+	<img src="Armstrong6.png" width="725" height="900"/>
 </td></tr></table>
 	<div class="blog"><h3><span style="font-size: 20px;">W</span>ELCOME TO <span style="font-size: 20px;">A</span>RTHROPUNK</h3>
 	<p class="nomargin">
+	<i>~August 2019~</i><br/><br>A lot of things have been happening. I got married! I got married! I got married! It's also the 50th anniversary of the Apollo 11 lunar landing, so I've created and posted my tribute. Thanks for sticking with me friends!<br/><br/><br/>
 	<i>~March 2019~</i><br/><br>It has been quite the semester. With teaching occupying the majority of my time, it has been difficult to find the energy to make and post comics. Those of you who know me, however, know that I have a few ideas on a few burners. Some are Arthropunk related; most are not. Stay tuned and, despite the long hiatus, I promise there will be more comics soon. Much love!<br/><br/><br/>
 	<i>~September 2018~</i><br/><br>Guys. I just got back to New York from the Small Press Expo. And my goodness. If you haven't been, go. Life-affirming. <a href="intimacy1.html">"Intimacy"</a>, <a href="never1.html">"Never Never Never Never Never"</a>, and <a href="two-anatomies-of-loneliness.html">"Two Anatomies of Loneliness"</a> all made appearances and I couldn't be happier!<br/><br/><br/>
 	<i>~July 2018~</i><br/><br>We're back with a new comic and its a bit of an Arthrobomb, the seventeen page, sixty-four panel <a href="comics.html#intimacy">"Intimacy"</a>. While I have enjoyed making this comic, I promise this will be the last color comic produced with what I call my "field setup", and I intend to be shifting to a less spartan approach once I'm more sedentary and as I prepare work on the next series of comics.<br/><br/>As you may have surmised the "All My Friends Are Machines" is on idefinite hiatus. Frankly, I was bored with the story and I've decided to shift and work on other long-form stories featuring the same characters. While I prepare that story, I'll pop back in now and then with more <a href="comics.html#dailies">dailies</a><br/><br/>Much thanks and much love!<br/><br/><br/>
