--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		<!-- <a href="/contact.html"><img src="https://imgur.com/9DEaj9p.png" border=0></a> -->
 		<!-- <a href="/support.html"><img src="" border=0></a> -->
 	</div><table class="homepage"><tr>
-	<td style="text-align: right;"><h1></h1><a href="comics.html#intimacy"><img src="newest.PNG" alt="NEWEST COMIC:" width="230px" height="50px"/></a><br/><br/><br/><a href="two-anatomies-of-loneliness.html"><img src="prev.jpg" alt="previous" width="120px" height="32px"/></a><br/><br/><!-- <a href="all-my-friends-are-machines1.html"><img src="first.PNG" alt="first" width="70px" height="36px"/> --></a></td>
+	<td style="text-align: right;"><h1></h1><a href="comics.html#armstrong"><img src="newest.PNG" alt="NEWEST COMIC:" width="230px" height="50px"/></a><br/><br/><br/><a href="tcomics.html#intimacy"><img src="prev.jpg" alt="previous" width="120px" height="32px"/></a><br/><br/><!-- <a href="all-my-friends-are-machines1.html"><img src="first.PNG" alt="first" width="70px" height="36px"/> --></a></td>
 <td>
 	<img src="Armstrong0.png" width="725" height="900"/>
 	<img src="Armstrong1.png" width="725" height="900"/>
