--- a/armstrong0.html
+++ b/armstrong0.html
@@ -28,7 +28,7 @@
 	<!-- <a href="Webcomic/support.html"><img src="" border=0></a> -->
 </div>
  <br/>	<img src="Armstrong0.png" width="725" height="1025"/><br />
-  <a href="Armstrong1.html"><img src="next.jpg" alt="next" width="135px" height="48px"/></a>
+  <a href="armstrong1.html"><img src="next.jpg" alt="next" width="135px" height="48px"/></a>
 </center>
 
   <footer text-align="center"><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a>"Arthropunk" and all related properties by Vernon Meidlinger-Chin are licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a></footer>
