--- a/follow.html
+++ b/follow.html
@@ -35,12 +35,12 @@
 		<!-- <a href="/contact.html"><img src="https://imgur.com/9DEaj9p.png" border=0></a> 
 		<a href="/support.html"><img src="" border=0></a> -->
 	</div>
-<div class="social-media">
+<!-- <div class="social-media">
 <a href="https://www.instagram.com/arthropunk/"><img class="social-media" src="ig.PNG" alt="instagram" height="150" width="150"/></a>
 <a href="https://twitter.com/adventurevernon"><img class="social-media"src="tw.PNG" alt="twitter" height="150" width="150"/></a><br />
 <a href="https://arthropunk.tumblr.com"><img class="social-media" src="tb.PNG" alt="tumblr" height="150" width="150"/></a>
 <a href="https://www.facebook.com/TheSandMusic/"><img class="social-media" src="fb.PNG" alt="facebook" height="150" width="150"/></a>
-</div>
+</div> -->
 	<!-- <a href=""><img src="" alt="Patreon" border=0></a> --></center>
 	<footer text-align="center"><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a>"Arthropunk" and all related properties by Vernon Meidlinger-Chin are licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a></footer>
 </body>
