--- a/follow.html
+++ b/follow.html
@@ -35,9 +35,9 @@
 		<!-- <a href="/contact.html"><img src="https://imgur.com/9DEaj9p.png" border=0></a> 
 		<a href="/support.html"><img src="" border=0></a> -->
 	</div>
-<!-- <div class="social-media">
-<a href="https://www.instagram.com/arthropunk/"><img class="social-media" src="ig.PNG" alt="instagram" height="150" width="150"/></a>
-<a href="https://twitter.com/adventurevernon"><img class="social-media"src="tw.PNG" alt="twitter" height="150" width="150"/></a><br />
+<div class="social-media">
+<a href="https://www.instagram.com/ghosts.of.the.masters/"><img class="social-media" src="ig.PNG" alt="instagram" height="150" width="150"/></a>
+<!-- <a href="https://twitter.com/adventurevernon"><img class="social-media"src="tw.PNG" alt="twitter" height="150" width="150"/></a><br />
 <a href="https://arthropunk.tumblr.com"><img class="social-media" src="tb.PNG" alt="tumblr" height="150" width="150"/></a>
 <a href="https://www.facebook.com/TheSandMusic/"><img class="social-media" src="fb.PNG" alt="facebook" height="150" width="150"/></a>
 </div> -->
