--- a/about.html
+++ b/about.html
@@ -24,6 +24,7 @@
 <body>
 	<center><div class="header">
 		<a href="comics.html#dailies"><img class="img-circle" src="dailies.jpg.jpg" alt=""Dailies"" border="4px solid black" width="200" height="200" /></a>
+		<a href="comics.html#armstrong"><img class="img-circle" src="armstrong.png" alt="Neil Armstrong, Home from the Moon" border="4px solid black" width="200" height="200" /></a>
 		<a href="comics.html#intimacy"><img class="img-circle" src="intimacy.jpg" alt="Intimacy" border="4px solid black" width="200" height="200" /></a>
 		<a href="comics.html#short-stories"><img class="img-circle" src="short-stories.jpg.jpg"alt="Short Stories" border="4px solid black" width="200" height="200" /></a>
 	</div>
@@ -53,8 +54,7 @@ email: vmeidlinger (at) gmail (dot) com<br />twitter: (at) adventurevernon
 <i>What kind of animals are the characters?</i><br/><br/><a href="gregor_tries_sports.html">Gregor</a> is a cockroach because what other name would a cockroach have? <a href="richard_please.html">Richard</a> is a praying mantis. <a href="all-my-friends-are-machines27.html">Lauren</a> is a moth. <a href="wheres_addie.html">Addie</a> is a damselfly. <a href="seth.html">Seth</a> is a hornet. <a href="all-my-friends-are-machines18.html">Derek/Derrick</a> is a crab. <a href="all-my-friends-are-machines10.html">Steve</a> is some kind of beetle. <a href="truman.html">Truman</a> is a fly. There's also a few <a href="trilobites.html">trilobites</a> and a <a href="police_2.html">spider</a> that show up now and then.<br/><br/>
 <i>Are there any non-Arthropod animals that show up in the comic?</i><br/><br/>Yeah, there's a <a href="oligocene_oligochaete_oligarchy.html">politician</a> that shows up on the TV who is an Oligochaete Annelid. Keep your eyes peeled, because I'm planning an other comic title that I hope will make use of molluscs!<br/><br/>
 <i>Given the difficulties in resolving early Arthropod evolution, will Burgess Shale faunas like </i>Anomalocaris<i>, </i>Opabinia<i>, and/or </i>Hallucigenia<i> appear in the comic?</i><br/><br/>Geez what a question. How did this end up on the frequently asked questions list? Its almost as if the author is just making stuff up here because nobody has asked any questions, frequently or otherwise.<br/><br/>
-<i>How often does this website update?</i><br /><br />Biweekly<br /><br />
-<i>Does biweekly mean twice a week or every other week?</i><br /><br />No more questions, child<br /><br />
+<i>How often does this website update?</i><br /><br />Rarely<br /><br />
 </p></div>
 	<footer text-align="center"><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a>		"Arthropunk" and all related properties by Vernon Meidlinger-Chin are licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a></footer>
 
