--- a/comics.html
+++ b/comics.html
@@ -25,9 +25,9 @@
 	<a href="index.html"><img src="home.PNG" alt="home" border=0></a>
   	<a href="about.html"><img src="about.PNG" alt="about" border=0></a>
 	<a href="comics.html"><img src="comics.PNG" alt="comics" border=0></a>
-	<a href="podcast.html"><img src="podcast.PNG" alt="podcast" border=0></a>
 	<a href="http://www.arthropunk.com/contact"><img src="https://imgur.com/9DEaj9p.png" border=0></a> 
-	<!-- <a href="follow.html"><img src="follow.PNG" alt="follow" border=0></a>
+	<!-- <a href="podcast.html"><img src="podcast.PNG" alt="podcast" border=0></a>
+	<a href="follow.html"><img src="follow.PNG" alt="follow" border=0></a>
 	<a href="http://www.arthropunk.com/support"><img src="" border=0></a> -->
 	</div><h1 id="dalies">"<span style="font-size: 20px;">D</span>ailies"</h1>
 <table> <td><a><img src="dailies.jpg.jpg" width="250" height="250" border="1px solid black" /></a></td>
