--- a/about.html
+++ b/about.html
@@ -32,9 +32,9 @@
 		<a href="index.html"><img src="home.PNG" border=0></a>
 		<a href="about.html"><img src="about.PNG" border=0></a>
 		<a href="comics.html"><img src="comics.PNG" border=0></a>
-		<a href="podcast.html"><img src="podcast.PNG" border=0></a>
+		<a href="/contact.html"><img src="https://imgur.com/9DEaj9p.png" border=0></a>
+		<!-- <a href="podcast.html"><img src="podcast.PNG" border=0></a>
 		<a href="follow.html"><img src="follow.PNG" border=0></a>
-		<!-- <a href="/contact.html"><img src="https://imgur.com/9DEaj9p.png" border=0></a>
 		<a href="/support.html"><img src="" border=0></a> -->
 	</div></center>
 <h1> </h1>
