--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 		<a href="index.html"><img src="home.PNG" alt="home" border=0></a>
 		<a href="about.html"><img src="about.PNG" alt="about" border=0></a>
 		<a href="comics.html"><img src="comics.PNG" alt="comics" border=0></a>
-		<a href="podcast.html"><img src="podcast.PNG" alt="podcast" border=0></a>
+		<a href="/contact.html"><img src="https://imgur.com/9DEaj9p.png" border=0></a>
+		<!-- <a href="podcast.html"><img src="podcast.PNG" alt="podcast" border=0></a>
 		<a href="follow.html"><img src="follow.PNG" alt="follow" border=0></a>
-		<!-- <a href="/contact.html"><img src="https://imgur.com/9DEaj9p.png" border=0></a> -->
-		<!-- <a href="/support.html"><img src="" border=0></a> -->
+		<a href="/support.html"><img src="" border=0></a> -->
 	</div><table class="homepage"><tr>
 	<td style="text-align: right;"><h1></h1><a href="comics.html#armstrong"><img src="newest.PNG" alt="NEWEST COMIC:" width="230px" height="50px"/></a><br/><br/><br/><a href="tcomics.html#intimacy"><img src="prev.jpg" alt="previous" width="120px" height="32px"/></a><br/><br/><!-- <a href="all-my-friends-are-machines1.html"><img src="first.PNG" alt="first" width="70px" height="36px"/> --></a></td>
 <td>
