--- a/bad_boys.html
+++ b/bad_boys.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
  <head>
-  <title>Gregor tries sports</title>
+  <title>Bad to the Bone</title>
   <link href="style.css" type="text/css" rel="stylesheet">
   <link rel="shortcut icon" href="arthroicon.ico" type="image/x-icon">
 
