--- a/armstrong5.html
+++ b/armstrong5.html
@@ -22,9 +22,9 @@
 	<a href="index.html"><img src="home.PNG" border=0 alt="Home"></a>
 	<a href="about.html"><img src="about.PNG" border=0 alt="About"></a>
 	<a href="comics.html"><img src="comics.PNG" border=0 alt="Comics"></a>
-	<a href="podcast.html"><img src="podcast.PNG" border=0 alt="Podcast"></a>
-	<a href="follow.html"><img src="follow.PNG" border=0 alt="Follow"></a>
-	<!-- <a href="Webcomic/contact.html"><img src="https://imgur.com/9DEaj9p.png" border=0></a> -->
+	<!-- <a href="podcast.html"><img src="podcast.PNG" border=0 alt="Podcast"></a>
+	<a href="follow.html"><img src="follow.PNG" border=0 alt="Follow"></a> -->
+	<a href="Webcomic/contact.html"><img src="https://imgur.com/9DEaj9p.png" border=0></a>
 	<!-- <a href="Webcomic/support.html"><img src="" border=0></a> -->
 </div>
  <br/>	<img src="Armstrong5.png" width="725" height="1025"/><br />
