--- a/armstrong3.html
+++ b/armstrong3.html
@@ -24,7 +24,7 @@
 	<a href="comics.html"><img src="comics.PNG" border=0 alt="Comics"></a>
 	<!-- <a href="podcast.html"><img src="podcast.PNG" border=0 alt="Podcast"></a>
 	<a href="follow.html"><img src="follow.PNG" border=0 alt="Follow"></a> -->
-	<a href="Webcomic/contact.html"><img src="https://imgur.com/9DEaj9p.png" border=0></a>
+	<a href="contact.html"><img src="https://imgur.com/9DEaj9p.png" border=0></a>
 	<!-- <a href="Webcomic/support.html"><img src="" border=0></a> -->
 </div>
  <br/>	<img src="Armstrong3.png" width="725" height="1025"/><br />
