--- a/arthropunk_origins.html
+++ b/arthropunk_origins.html
@@ -20,13 +20,10 @@
 <!-- Begin Webcomic Content -->
 
 <body><center><div class="navigation">
-	<a href="index.html"><img src="home.PNG" alt="home" border=0></a>
-	<a href="about.html"><img src="about.PNG" alt="about" border=0></a>
-	<a href="comics.html"><img src="comics.PNG" alt="comics" border=0></a>
-	<a href="podcast.html"><img src="podcast.PNG" alt="podcast" border=0></a>
-	<a href="follow.html"><img src="follow.PNG" alt="follow" border=0></a>
-	<!-- <a href="http://www.arthropunk.com/contact"><img src="https://imgur.com/9DEaj9p.png" border=0></a> 
-	<a href="http://www.arthropunk.com/support"><img src="" border=0></a> -->
+		<a href="index.html"><img src="home.PNG" alt="home" border=0></a>
+		<a href="about.html"><img src="about.PNG" alt="about" border=0></a>
+		<a href="comics.html"><img src="comics.PNG" alt="comics" border=0></a>
+		<a href="contact.html"><img src="https://imgur.com/9DEaj9p.png" border=0></a>
 </div>
     <img src="t1.jpg" width="500" height="500"/><br />
     <a href="ferrets_1.html"><img src="next.jpg" alt="next" width="135px" height="48px"/></a></center>
