--- a/intimacy10.html
+++ b/intimacy10.html
@@ -25,7 +25,7 @@
 	<a href="comics.html"><img src="comics.PNG" border=0 alt="Comics"></a>
 	<!-- <a href="podcast.html"><img src="podcast.PNG" border=0 alt="Podcast"></a>
 	<a href="follow.html"><img src="follow.PNG" border=0 alt="Follow"></a> -->
-	<a href="Webcomic/contact.html"><img src="https://imgur.com/9DEaj9p.png" border=0></a>
+	<a href="contact.html"><img src="https://imgur.com/9DEaj9p.png" border=0></a>
 	<!-- <a href="Webcomic/support.html"><img src="" border=0></a> -->
 </div>
  <br/><img src="intimacy10.jpg" width="900" height="725"/><br />
