--- a/intimacy14.html
+++ b/intimacy14.html
@@ -20,13 +20,10 @@
 <body>
 <center>
 <div class="navigation">
-	<a href="index.html"><img src="home.PNG" border=0 alt="Home"></a>
-	<a href="about.html"><img src="about.PNG" border=0 alt="About"></a>
-	<a href="comics.html"><img src="comics.PNG" border=0 alt="Comics"></a>
-	<a href="podcast.html"><img src="podcast.PNG" border=0 alt="Podcast"></a>
-	<a href="follow.html"><img src="follow.PNG" border=0 alt="Follow"></a>
-	<!-- <a href="Webcomic/contact.html"><img src="https://imgur.com/9DEaj9p.png" border=0></a> -->
-	<!-- <a href="Webcomic/support.html"><img src="" border=0></a> -->
+	<a href="index.html"><img src="home.PNG" alt="home" border=0></a>
+	<a href="about.html"><img src="about.PNG" alt="about" border=0></a>
+	<a href="comics.html"><img src="comics.PNG" alt="comics" border=0></a>
+	<a href="contact.html"><img src="https://imgur.com/9DEaj9p.png" border=0></a>
 </div>
  <br/><img src="intimacy14.jpg" width="900" height="725"/><br />
   <a href="intimacy13.html"><img src="prev.jpg" alt="prev" width="180px" height="48px"/></a>
