--- a/mastodon.html
+++ b/mastodon.html
@@ -22,10 +22,7 @@
 	<a href="index.html"><img src="home.PNG" alt="home" border=0></a>
 	<a href="about.html"><img src="about.PNG" alt="about" border=0></a>
 	<a href="comics.html"><img src="comics.PNG" alt="comics" border=0></a>
-	<a href="podcast.html"><img src="podcast.PNG" alt="podcast" border=0></a>
-	<a href="follow.html"><img src="follow.PNG" alt="follow" border=0></a>
-	<!-- <a href="http://www.arthropunk.com/contact"><img src="https://imgur.com/9DEaj9p.png" border=0></a> 
-	<a href="http://www.arthropunk.com/support"><img src="" border=0></a> -->
+	<a href="contact.html"><img src="https://imgur.com/9DEaj9p.png" border=0></a>
 </div>
 <center><img src="t7.jpg" width="500" height="500"/><br /><a href="new_england.html"><img src="prev.jpg" alt="previous" width="180px" height="48px"/></a><a href="trilobites.html"><img src="next.jpg" alt="next" width="135px" height="48px"/></a></center>
 	<footer text-align="center"><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a>"Arthropunk" and all related properties by Vernon Meidlinger-Chin are licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a></footer>
