--- a/math_problem.html
+++ b/math_problem.html
@@ -21,13 +21,10 @@
 <body>
  <center>
   <div class="navigation">
-    <a href="index.html"><img src="home.PNG" alt="home" border=0></a>
-    <a href="about.html"><img src="about.PNG" alt="about" border=0></a>
-    <a href="comics.html"><img src="comics.PNG" alt="comics" border=0></a>
-    <a href="podcast.html"><img src="podcast.PNG" alt="podcast" border=0></a>
-    <a href="follow.html"><img src="follow.PNG" alt="follow" border=0></a>
-     <!-- <a href="http://www.arthropunk.com/contact"><img src="https://imgur.com/9DEaj9p.png" border=0></a> 
-     <a href="http://www.arthropunk.com/support"><img src="" border=0></a> -->
+    	<a href="index.html"><img src="home.PNG" alt="home" border=0></a>
+	<a href="about.html"><img src="about.PNG" alt="about" border=0></a>
+	<a href="comics.html"><img src="comics.PNG" alt="comics" border=0></a>
+	<a href="contact.html"><img src="https://imgur.com/9DEaj9p.png" border=0></a>
    </div>
     <img src="d26_math.jpg" width="650" height="600"/><br />
     <a href="DARE.html"><img src="prev.jpg" alt="previous" width="180px" height="48px"/></a>
