--- a/new_england.html
+++ b/new_england.html
@@ -21,10 +21,7 @@
 	<a href="index.html"><img src="home.PNG" alt="home" border=0></a>
 	<a href="about.html"><img src="about.PNG" alt="about" border=0></a>
 	<a href="comics.html"><img src="comics.PNG" alt="comics" border=0></a>
-	<a href="podcast.html"><img src="podcast.PNG" alt="podcast" border=0></a>
-	<a href="follow.html"><img src="follow.PNG" alt="follow" border=0></a>
-	<!-- <a href="http://www.arthropunk.com/contact"><img src="https://imgur.com/9DEaj9p.png" border=0></a> 
-	<a href="http://www.arthropunk.com/support"><img src="" border=0></a> -->
+	<a href="contact.html"><img src="https://imgur.com/9DEaj9p.png" border=0></a>
 </div>
 <img src="t4.jpg" width="500" height="500"/><br />
 <a href="ferrets_2.html"><img src="prev.jpg" alt="previous" width="180px" height="48px"/></a>
