--- a/two-anatomies-of-loneliness.html
+++ b/two-anatomies-of-loneliness.html
@@ -20,13 +20,10 @@
 <body>
  <center>
   <div class="navigation">
-    <a href="index.html"><img src="home.PNG" alt="home" border=0></a>
-    <a href="about.html"><img src="about.PNG" alt="about" border=0></a>
-    <a href="comics.html"><img src="comics.PNG" alt="comics" border=0></a>
-    <a href="podcast.html"><img src="podcast.PNG" alt="podcast" border=0></a>
-    <a href="follow.html"><img src="follow.PNG" alt="follow" border=0></a>
-     <!-- <a href="http://www.arthropunk.com/contact"><img src="https://imgur.com/9DEaj9p.png" border=0></a> 
-     <a href="http://www.arthropunk.com/support"><img src="" border=0></a> -->
+	<a href="index.html"><img src="home.PNG" alt="home" border=0></a>
+	<a href="about.html"><img src="about.PNG" alt="about" border=0></a>
+	<a href="comics.html"><img src="comics.PNG" alt="comics" border=0></a>
+	<a href="contact.html"><img src="https://imgur.com/9DEaj9p.png" border=0></a>
    </div>
     <br /><table><tr><td><img src="Two-Anatomies1.png" width="600" height="800"/></td>
 	<td><img src="Two-Anatomies2.png" width="600" height="800"/></td></tr></table><br />
