--- a/contact.html
+++ b/contact.html
@@ -36,9 +36,9 @@
 		<a href="follow.html"><img src="follow.PNG" border=0></a>
 		<a href="/support.html"><img src="" border=0></a> -->
 	</div>
-<div class="social-media">
+<!-- <div class="social-media">
 <a href="https://www.instagram.com/ghosts.of.the.masters/"><img class="social-media" src="ig.PNG" alt="instagram" height="150" width="150"/></a>
-<!-- <a href="https://twitter.com/adventurevernon"><img class="social-media"src="tw.PNG" alt="twitter" height="150" width="150"/></a><br />
+<a href="https://twitter.com/adventurevernon"><img class="social-media"src="tw.PNG" alt="twitter" height="150" width="150"/></a><br />
 <a href="https://arthropunk.tumblr.com"><img class="social-media" src="tb.PNG" alt="tumblr" height="150" width="150"/></a>
 <a href="https://www.facebook.com/TheSandMusic/"><img class="social-media" src="fb.PNG" alt="facebook" height="150" width="150"/></a>
 </div> -->
