--- a/contact.html
+++ b/contact.html
@@ -36,6 +36,23 @@
 		<a href="follow.html"><img src="follow.PNG" border=0></a>
 		<a href="/support.html"><img src="" border=0></a> -->
 	</div>
+<div class="container">
+	<form action="action_page.php">
+    <label for="fname">First Name</label>
+    <input type="text" id="fname" name="firstname" placeholder="Your name..">
+    <label for="lname">Last Name</label>
+    <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+    <label for="country">Country</label>
+    <select id="country" name="country">
+      <option value="australia">Australia</option>
+      <option value="canada">Canada</option>
+      <option value="usa">USA</option>
+    </select>
+    <label for="subject">Subject</label>
+    <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+    <input type="submit" value="Submit">
+  </form>
+</div>
 <!-- <div class="social-media">
 <a href="https://www.instagram.com/ghosts.of.the.masters/"><img class="social-media" src="ig.PNG" alt="instagram" height="150" width="150"/></a>
 <a href="https://twitter.com/adventurevernon"><img class="social-media"src="tw.PNG" alt="twitter" height="150" width="150"/></a><br />
