--- a/flirting.html
+++ b/flirting.html
@@ -26,7 +26,7 @@
 	<a href="comics.html"><img src="comics.PNG" alt="comics" border=0></a>
 	<a href="contact.html"><img src="https://imgur.com/9DEaj9p.png" border=0></a>
    </div>
-    <img src="d21_Flirting.jpg" width="700" height="600"/><br />
+    <img src="d21_flirting.jpg" width="700" height="600"/><br />
     <a href="truman.html"><img src="prev.jpg" alt="previous" width="180px" height="48px"/></a>
     <a href="super_punk_1.html"><img src="next.jpg" alt="next" width="135px" height="48px"/></a>
  </center>
