--- a/comics.html
+++ b/comics.html
@@ -38,7 +38,7 @@
 		<br /> <a href="quarantine.html>63 - Quarantine</a> / <a href="lockdown.html>62 - Lockdown</a>
 		<br /> <a href="sewers.html>61 - Craziest Thing in the News</a> / <a href="metal.html">60 - Origins of Metal</a> 
 		<br /> <a href="got.html">59 - Game of Thrones</a> / <a href="prequel.html">58 - Technical Prequel</a>
-		<br /> <a href="dnd.html">57 - Dungeons and Dragons</a> / <a href="coloring.html">56 - Coloring Book</a>
+		<br /> <a href="dnd.html">57 - Dungeons & Dragons</a> / <a href="coloring.html">56 - Coloring Book</a>
 		<br /> <a href="sorbet.html">55 - Sorbet</a> / <a href="funk_bassist.html">54 - Funk Bassist</a> 
 		<br /> <a href="sorbet.html">53 - Sorbet</a> / <a href="funk_bassist.html">52 - Funk Bassist</a> 
 		<br /> <a href="open_mic_night.html">51 - Open Mic Night</a> / <a href="police_2.html">50 - Police, part 2</a> 
