--- a/comics.html
+++ b/comics.html
@@ -34,7 +34,7 @@
 	<td>Gags! Jokes! One-shot cartoons, some of which kind of tell a story<br><br><i>~page count:</i>
 		<br /> <a href="90s.html">69 - The 90s</a> / <a href="wap.html">68 - W.A.P.</a> / 
 		<br /> <a href="iced.html>67 - Gregor Gets Iced</a> / <a href="time.html">66 - Time</a> 
-		<br /> <a href="revelation.html>65 - Gregor's Second Revelation</a> / <a href="god.html">64 - God Speaks to Gregor</a>
+		<br /> <a href="revelation.html">65 - Gregor's Second Revelation</a> / <a href="god.html">64 - God Speaks to Gregor</a>
 		<br /> <a href="quarantine.html>63 - Quarantine</a> / <a href="lockdown.html>62 - Lockdown</a>
 		<br /> <a href="sewers.html>61 - Craziest Thing in the News</a> / <a href="metal.html">60 - Origins of Metal</a> 
 		<br /> <a href="got.html">59 - Game of Thrones</a> / <a href="prequel.html">58 - Technical Prequel</a>
