--- a/comics.html
+++ b/comics.html
@@ -34,10 +34,12 @@
 	<td>Gags! Jokes! One-shot cartoons, some of which kind of tell a story<br><br><i>~page count:</i>
 		<br /> <a href="90s.html">67 - The 90s</a> / <a href="wap.html">66 - W.A.P.</a> / 
 		<br /> <a href="iced.html">65 - Gregor Gets Iced</a> / <a href="time.html">64 - Time</a> 
-		<br /> <a href="revelation.html">63 - Gregor's Second Revelation</a> / <a href="god.html">62 - God Speaks to Gregor</a>
-		<br /> <a href="quarantine.html>61 - Quarantine</a> / <a href="lockdown.html>60 - Lockdown</a>
-		<br /> <a href="sewers.html>59 - Craziest Thing in the News</a> / <a href="metal.html">58 - Origins of Metal</a> 
-		<br /> <a href="got.html">57 - Game of Thrones</a> / <a href="prequel.html">56 - Technical Prequel</a>
+		<br /> <a href="revelation.html">63 - Gregor's Second Revelation</a> 
+		<br /> <a href="god.html">62 - God Speaks to Gregor</a>
+		<br /> <a href="quarantine.html">61 - Quarantine</a> / <a href="lockdown.html>60 - Lockdown</a>
+		<br /> <a href="sewers.html">59 - Craziest Thing in the News</a> / <a href="metal.html">58 - Origins of Metal</a> 
+		<br /> <a href="got.html">57 - Game of Thrones</a> 
+		<br /> <a href="prequel.html">56 - Technical Prequel</a>
 		<br /> <a href="dnd.html">55 - Dungeons & Dragons</a>
 		<br /> <a href="coloring.html">54 - Coloring Book</a>
 		<br /> <a href="sorbet.html">53 - Sorbet</a> / <a href="funk_bassist.html">52 - Funk Bassist</a> 
@@ -62,11 +64,11 @@
 		<br /> <a href="tattoos.html">17 - Tattoos</a> / <a href="hello_ladies.html">16 - Hello, ladies</a> 
 		<br /> <a href="richard_and_addie.html">15 - Richard and Addie</a> / <a href="richard_please.html">14 - Richard, please</a> 
 		<br /> <a href="couchtalk.html">13 - Couch Talk</a> / <a href="seth.html">12 - Seth</a> / <a href="hey_seth_2.html">11 - Hey Seth, Part 2</a> / <a href="hey_seth_1.html">10 - Hey Seth, Part 1</a> 
-			<br /> <a href="richard_and_gregor_go_shopping.html">9 - Richard and Gregor go shopping</a> 
-			<br /> <a href="police_1.html">8 - Police, Part 1</a> / <a href="frosties.html">7 - Frosties</a> / <a href="trilobites.html">6 - Trilobites</a> 
-			<br /> <a href="mastodon.html">5 - Mastodon</a> / <a href="new_england.html">4 - New England</a> 
-			<br /> <a href="ferrets_2.html">3 - Ferrets, Part 2</a> / <a href="ferrets_1.html">2 - Ferrets, Part 1</a> 
-			<br /> <a href="arthropunk_origins.html"> 1 - Arthropunk Origins </a> </td></tr></table>
+		<br /> <a href="richard_and_gregor_go_shopping.html">9 - Richard and Gregor go shopping</a> 
+		<br /> <a href="police_1.html">8 - Police, Part 1</a> / <a href="frosties.html">7 - Frosties</a> / <a href="trilobites.html">6 - Trilobites</a> 
+		<br /> <a href="mastodon.html">5 - Mastodon</a> / <a href="new_england.html">4 - New England</a> 
+		<br /> <a href="ferrets_2.html">3 - Ferrets, Part 2</a> / <a href="ferrets_1.html">2 - Ferrets, Part 1</a> 
+		<br /> <a href="arthropunk_origins.html"> 1 - Arthropunk Origins </a> </td></tr></table>
 
 	<h1 id="armstrong"><span style="font-size: 20px";>N</span>eil <span style="font-size: 20px";>A</span>rmstrong, <span style="font-size: 20px";>H</span>ome <span style="font-size: 20px";>F</span>rom the <span style="font-size: 20px";>M</span>oon</h1><table><td><a><img class="img-up" src="armstrong.png" width="250" height="250" border="1px solid black" style="vertical-align: top;"/></a></td><td><i>Summer 2019</i><br><br> How did Neil Armstrong feel when he knew he was going to the moon? How did he feel after he returned? We cannot know for sure, but we can speculate.<br/><br/><i>~ page count:</i><br/><a href="armstrong0.html">0</a> / <a href="armstrong1.html">1</a> / <a href="armstrong2.html">2</a> / <a href="armstrong3.html">3</a> / <a href="armstrong4.html">4</a> / <a href="armstrong5.html">5</a> / <a href="armstrong6.html">6</a></td></tr></table>
 		
