--- a/comics.html
+++ b/comics.html
@@ -35,8 +35,8 @@
 		<br /> <a href="90s.html">67 - The 90s</a> / <a href="wap.html">66 - W.A.P.</a> / 
 		<br /> <a href="iced.html">65 - Gregor Gets Iced</a> / <a href="time.html">64 - Time</a> 
 		<br /> <a href="revelation.html">63 - Gregor's Second Revelation</a> 
-		<br /> <a href="god.html">62 - God Speaks to Gregor</a>
-		<br /> <a href="quarantine.html">61 - Quarantine</a> / <a href="lockdown.html>60 - Lockdown</a>
+		<br /> <a href="god.html">62 - God Speaks to Gregor</a> 
+		<br /> <a href="quarantine.html">61 - Quarantine</a> / <a href="lockdown.html">60 - Lockdown</a>
 		<br /> <a href="sewers.html">59 - Craziest Thing in the News</a> / <a href="metal.html">58 - Origins of Metal</a> 
 		<br /> <a href="got.html">57 - Game of Thrones</a> 
 		<br /> <a href="prequel.html">56 - Technical Prequel</a>
