--- a/comics.html
+++ b/comics.html
@@ -39,7 +39,8 @@
 		<br /> <a href="quarantine.html">61 - Quarantine</a> / <a href="lockdown.html">60 - Lockdown</a>
 		<br /> <a href="sewers.html">59 - Craziest Thing in the News</a> 
 		<br /> <a href="metal.html">58 - Origins of Metal</a> 
-		<br /> <a href="got.html">57 - Game of Thrones</a> / <a href="prequel.html">56 - Technical Prequel</a>
+		<br /> <a href="got.html">57 - Game of Thrones</a> 
+		<br /> <a href="prequel.html">56 - Technical Prequel</a>
 		<br /> <a href="dnd.html">55 - Dungeons & Dragons</a>
 		<br /> <a href="coloring.html">54 - Coloring Book</a>
 		<br /> <a href="sorbet.html">53 - Sorbet</a> / <a href="funk_bassist.html">52 - Funk Bassist</a> 
