--- a/coloring.html
+++ b/coloring.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
  <head>
-  <title>Sorbet</title>
+  <title>Coloring Book</title>
   <link href="style.css" type="text/css" rel="stylesheet">
   <link rel="shortcut icon" href="arthroicon.ico" type="image/x-icon">
 
@@ -33,4 +33,4 @@
  <footer text-align="center"><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a>"Arthropunk" and all related properties by Vernon Meidlinger-Chin are licensed under a <a rel="license" 
 href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a></footer>
 </body>
-</htm
+</html>
