--- a/normcore.html
+++ b/normcore.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
  <head>
-  <title>Opera</title>
+  <title>Normcore</title>
   <link href="style.css" type="text/css" rel="stylesheet">
   <link rel="shortcut icon" href="arthroicon.ico" type="image/x-icon">
 
