--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 <body>
 	<center><div class="header">
 		<a href="comics.html#dailies"><img class="img-circle" src="dailies.jpg.jpg" alt="Dailies" border="4px solid black"  width="200" height="200" /></a>
+		<a href="comics.html#foucault"><img class="img-circle" src="foucault.jpg" alt="Dailies" border="4px solid black"  width="200" height="200" /></a>
 		<a href="comics.html#armstrong"><img class="img-circle" src="armstrong.png" alt="Neil Armstrong, Home from the Moon" border="4px solid black" width="200" height="200" /></a>
 		<a href="comics.html#intimacy"><img class="img-circle" src="intimacy.jpg" alt="Intimacy" border="4px solid black" width="200" height="200" /></a>
 		<a href="comics.html#short-stories"><img class="img-circle" src="short-stories.jpg.jpg"alt="Short Stories" border="4px solid black" width="200" height="200" /></a>
@@ -36,18 +37,13 @@
 		<a href="follow.html"><img src="follow.PNG" alt="follow" border=0></a>
 		<a href="/support.html"><img src="" border=0></a> -->
 	</div><table class="homepage"><tr>
-	<td style="text-align: right;"><h1></h1><a href="comics.html#armstrong"><img src="newest.PNG" alt="NEWEST COMIC:" width="230px" height="50px"/></a><br/><br/><br/><a href="comics.html#intimacy"><img src="prev.jpg" alt="previous" width="120px" height="32px"/></a><br/><br/><!-- <a href="all-my-friends-are-machines1.html"><img src="first.PNG" alt="first" width="70px" height="36px"/> --></a></td>
+	<td style="text-align: right;"><h1></h1><a href="90s.html"><img src="newest.PNG" alt="NEWEST COMIC:" width="230px" height="50px"/></a><br/><br/><br/><a href="wap.html"><img src="prev.jpg" alt="previous" width="120px" height="32px"/></a><br/><br/><!-- <a href="all-my-friends-are-machines1.html"><img src="first.PNG" alt="first" width="70px" height="36px"/> --></a></td>
 <td>
-	<img src="Armstrong0.png" width="725" height="1025"/>
-	<img src="Armstrong1.png" width="725" height="1025"/>
-	<img src="Armstrong2.png" width="725" height="1025"/>
-	<img src="Armstrong3.png" width="725" height="1025"/>
-	<img src="Armstrong4.png" width="725" height="1025"/>
-	<img src="Armstrong5.png" width="725" height="1025"/>
-	<img src="Armstrong6.png" width="725" height="1025"/>
+	<img src="90s.png" width="691" height="600"/>
 </td></tr></table>
 	<div class="blog"><h3><span style="font-size: 20px;">W</span>ELCOME TO <span style="font-size: 20px;">A</span>RTHROPUNK</h3>
 	<p class="nomargin">
+	<i>~November 2022~</i><br/><br>Well it has been a few years since I've updated and I'd like to welcome you all the the world of Arthropunk! Gregor and pals are back for new adventures, Michel Foucault is in the house, and all the older comics are still available. Thank you so much for your continued support!<br/><br/><br/>
 	<i>~August 2019~</i><br/><br>A lot of things have been happening. I got married! I got married! I got married! It's also the 50th anniversary of the Apollo 11 lunar landing, so I've created and posted my tribute. Thanks for sticking with me friends!<br/><br/><br/>
 	<i>~March 2019~</i><br/><br>It has been quite the semester. With teaching occupying the majority of my time, it has been difficult to find the energy to make and post comics. Those of you who know me, however, know that I have a few ideas on a few burners. Some are Arthropunk related; most are not. Stay tuned and, despite the long hiatus, I promise there will be more comics soon. Much love!<br/><br/><br/>
 	<i>~September 2018~</i><br/><br>Guys. I just got back to New York from the Small Press Expo. And my goodness. If you haven't been, go. Life-affirming. <a href="intimacy1.html">"Intimacy"</a>, <a href="never1.html">"Never Never Never Never Never"</a>, and <a href="two-anatomies-of-loneliness.html">"Two Anatomies of Loneliness"</a> all made appearances and I couldn't be happier!<br/><br/><br/>
