--- a/comics.html
+++ b/comics.html
@@ -64,12 +64,20 @@
 		<br /> <a href="music_2.html">19 - Music, part 2</a> / <a href="music_1.html">18 - Music, part 1</a> 
 		<br /> <a href="tattoos.html">17 - Tattoos</a> / <a href="hello_ladies.html">16 - Hello, ladies</a> 
 		<br /> <a href="richard_and_addie.html">15 - Richard and Addie</a> / <a href="richard_please.html">14 - Richard, please</a> 
-		<br /> <a href="couchtalk.html">13 - Couch Talk</a> / <a href="seth.html">12 - Seth</a> / <a href="hey_seth_2.html">11 - Hey Seth, Part 2</a> / <a href="hey_seth_1.html">10 - Hey Seth, Part 1</a> 
+		<br /> <a href="couchtalk.html">13 - Couch Talk</a> / <a href="seth.html">12 - Seth</a> 
+		<br /> <a href="hey_seth_2.html">11 - Hey Seth, Part 2</a> / <a href="hey_seth_1.html">10 - Hey Seth, Part 1</a> 
 		<br /> <a href="richard_and_gregor_go_shopping.html">9 - Richard and Gregor go shopping</a> 
 		<br /> <a href="police_1.html">8 - Police, Part 1</a> / <a href="frosties.html">7 - Frosties</a> / <a href="trilobites.html">6 - Trilobites</a> 
 		<br /> <a href="mastodon.html">5 - Mastodon</a> / <a href="new_england.html">4 - New England</a> 
 		<br /> <a href="ferrets_2.html">3 - Ferrets, Part 2</a> / <a href="ferrets_1.html">2 - Ferrets, Part 1</a> 
 		<br /> <a href="arthropunk_origins.html"> 1 - Arthropunk Origins </a> </td></tr></table>
+			
+</div><h1 id="foucault">"<span style="font-size: 20px;">H</span>i it's me, <span style="font-size: 20px";>M</span>ichel <span style="font-size: 20px";>F</span>oucault!"</h1>
+<table> <td><a><img src="foucault.jpg" width="250" height="250" border="1px solid black" /></a></td>
+	<td>The continuing misadventures of history's greatest <br><br><i>~page count:</i>
+		<br /> <a></a>
+		<br /> <a></a>
+	</td></tr></table>
 
 	<h1 id="armstrong"><span style="font-size: 20px";>N</span>eil <span style="font-size: 20px";>A</span>rmstrong, <span style="font-size: 20px";>H</span>ome <span style="font-size: 20px";>F</span>rom the <span style="font-size: 20px";>M</span>oon</h1><table><td><a><img class="img-up" src="armstrong.png" width="250" height="250" border="1px solid black" style="vertical-align: top;"/></a></td><td><i>Summer 2019</i><br><br> How did Neil Armstrong feel when he knew he was going to the moon? How did he feel after he returned? We cannot know for sure, but we can speculate.<br/><br/><i>~ page count:</i><br/><a href="armstrong0.html">0</a> / <a href="armstrong1.html">1</a> / <a href="armstrong2.html">2</a> / <a href="armstrong3.html">3</a> / <a href="armstrong4.html">4</a> / <a href="armstrong5.html">5</a> / <a href="armstrong6.html">6</a></td></tr></table>
 		
