--- a/comics.html
+++ b/comics.html
@@ -74,9 +74,13 @@
 			
 </div><h1 id="foucault">"<span style="font-size: 20px;">H</span>i it's me, <span style="font-size: 20px";>M</span>ichel <span style="font-size: 20px";>F</span>oucault!"</h1>
 <table> <td><a><img src="foucault.jpg" width="250" height="250" border="1px solid black" /></a></td>
-	<td>The continuing misadventures of history's greatest <br><br><i>~page count:</i>
-		<br /> <a></a>
-		<br /> <a></a>
+	<td>The continuing misadventures of history's greatest Tony Hawk stan<br><br><i>~page count:</i>
+		<br /> <a href="academia.html>5 - The State of Academia</a>
+		<br /> <a href="structuralism.html>5 - Structuralism</a>
+		<br /> <a href="chomsky.html>4 - Noam Chomsky</a>
+		<br /> <a href="certainty.html">3 - Certainty and Uncertainty</a>
+		<br /> <a href="sexuality.html>2 - The History of Sexuality</a>
+		<br /> <a href="panopticon.html">1 - Panopticon</a>
 	</td></tr></table>
 
 	<h1 id="armstrong"><span style="font-size: 20px";>N</span>eil <span style="font-size: 20px";>A</span>rmstrong, <span style="font-size: 20px";>H</span>ome <span style="font-size: 20px";>F</span>rom the <span style="font-size: 20px";>M</span>oon</h1><table><td><a><img class="img-up" src="armstrong.png" width="250" height="250" border="1px solid black" style="vertical-align: top;"/></a></td><td><i>Summer 2019</i><br><br> How did Neil Armstrong feel when he knew he was going to the moon? How did he feel after he returned? We cannot know for sure, but we can speculate.<br/><br/><i>~ page count:</i><br/><a href="armstrong0.html">0</a> / <a href="armstrong1.html">1</a> / <a href="armstrong2.html">2</a> / <a href="armstrong3.html">3</a> / <a href="armstrong4.html">4</a> / <a href="armstrong5.html">5</a> / <a href="armstrong6.html">6</a></td></tr></table>
