--- a/comics.html
+++ b/comics.html
@@ -75,11 +75,11 @@
 </div><h1 id="foucault">"<span style="font-size: 20px;">H</span>i it's me, <span style="font-size: 20px";>M</span>ichel <span style="font-size: 20px";>F</span>oucault!"</h1>
 <table> <td><a><img src="foucault.jpg" width="250" height="250" border="1px solid black" /></a></td>
 	<td>The continuing misadventures of history's greatest Tony Hawk stan<br><br><i>~page count:</i>
-		<br /> <a href="academia.html>5 - The State of Academia</a>
-		<br /> <a href="structuralism.html>5 - Structuralism</a>
-		<br /> <a href="chomsky.html>4 - Noam Chomsky</a>
+		<br /> <a href="academia.html">5 - The State of Academia</a>
+		<br /> <a href="structuralism.html">5 - Structuralism</a>
+		<br /> <a href="chomsky.html:>4 - Noam Chomsky</a>
 		<br /> <a href="certainty.html">3 - Certainty and Uncertainty</a>
-		<br /> <a href="sexuality.html>2 - The History of Sexuality</a>
+		<br /> <a href="sexuality.html">2 - The History of Sexuality</a>
 		<br /> <a href="panopticon.html">1 - Panopticon</a>
 	</td></tr></table>
 
