--- a/panopticon.html
+++ b/panopticon.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Arthropunk Origins!</title>
+	<title>Panopticon</title>
 	<link href="style.css" type="text/css" rel="stylesheet">
 	<link rel="shortcut icon" href="arthroicon.ico" type="image/x-icon">
 
