--- a/certainty.html
+++ b/certainty.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>The History of Sexuality</title>
+	<title>Certainty and Uncertainty</title>
 	<link href="style.css" type="text/css" rel="stylesheet">
 	<link rel="shortcut icon" href="arthroicon.ico" type="image/x-icon">
 
