--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head><link href="style.css" rel="stylesheet" type="text/css">
-	<title>Follow - Arthropunk</title>
+	<title>Contact - Arthropunk</title>
 	<meta http-equiv="author" content="Vernon Meidlinger-Chin">
 	<meta http-equiv="description" content="Online graphic novel by, for, and about Rock and Roll Insects">
 	<meta http-equiv="keywords" content="comic, webcomic, graphic novel, punk, insect, music, arthropod, entomology, feels, funny">
@@ -20,40 +20,9 @@
 	
 <!-- Begin Webcomic Content -->
 
-<body>
-	<center><div class="header">
-		<a href="comics.html#dailies"><img class="img-circle" src="dailies.jpg.jpg" alt=""Dailies"" border="4px solid black"  width="200" height="200" /></a>
-		<a href="comics.html#foucault"><img class="img-circle" src="foucault.jpg" alt="Foucault" border="4px solid black"  width="200" height="200" /></a>
-		<a href="comics.html#armstrong"><img class="img-circle" src="armstrong.png" alt="Neil Armstrong, Home from the Moon" border="4px solid black" width="200" height="200" /></a>
-		<a href="comics.html#intimacy"><img class="img-circle" src="intimacy.jpg" alt="Intimacy" border="4px solid black" width="200" height="200" /></a>
-		<a href="comics.html#short-stories"><img class="img-circle" src="short-stories.jpg.jpg"alt="Short Stories" border="4px solid black" width="200" height="200" /></a>
-	</div>
-	<div class="navigation">
-		<a href="index.html"><img src="home.PNG" border=0></a>
-		<a href="about.html"><img src="about.PNG" border=0></a>
-		<a href="comics.html"><img src="comics.PNG" border=0></a>
-		<a href="/contact.html"><img src="https://imgur.com/9DEaj9p.png" border=0></a> 
-		<!-- <a href="podcast.html"><img src="podcast.PNG" border=0></a>
-		<a href="follow.html"><img src="follow.PNG" border=0></a>
-		<a href="/support.html"><img src="" border=0></a> -->
-	</div>
-<div class="container">
-	<form action="action_page.php">
-    <label for="fname">First Name</label>
-    <input type="text" id="fname" name="firstname" placeholder="Your name..">
-    <label for="lname">Last Name</label>
-    <input type="text" id="lname" name="lastname" placeholder="Your last name..">
-    <label for="country">Country</label>
-    <select id="country" name="country">
-      <option value="australia">Australia</option>
-      <option value="canada">Canada</option>
-      <option value="usa">USA</option>
-    </select>
-    <label for="subject">Subject</label>
-    <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
-    <input type="submit" value="Submit">
-  </form>
-</div>
+<div class="blog"><h3><span style="font-size:20px;">C</span>ONTACT <span style="font-size:20px;">A</span>RTHROPUNK<span style="font-size:20px;">:</span></h3><p>
+<b>The author:</b><br /><br /> 
+	
 <!-- <div class="social-media">
 <a href="https://www.instagram.com/ghosts.of.the.masters/"><img class="social-media" src="ig.PNG" alt="instagram" height="150" width="150"/></a>
 <a href="https://twitter.com/adventurevernon"><img class="social-media"src="tw.PNG" alt="twitter" height="150" width="150"/></a><br />
