--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,23 @@
 	</head>
 	
 <!-- Begin Webcomic Content -->
-
+<body>
+	<center><div class="header">
+		<a href="comics.html#dailies"><img class="img-circle" src="dailies.jpg.jpg" alt=""Dailies"" border="4px solid black"  width="200" height="200" /></a>
+		<a href="comics.html#foucault"><img class="img-circle" src="foucault.jpg" alt="Foucault" border="4px solid black"  width="200" height="200" /></a>
+		<a href="comics.html#armstrong"><img class="img-circle" src="armstrong.png" alt="Neil Armstrong, Home from the Moon" border="4px solid black" width="200" height="200" /></a>
+		<a href="comics.html#intimacy"><img class="img-circle" src="intimacy.jpg" alt="Intimacy" border="4px solid black" width="200" height="200" /></a>
+		<a href="comics.html#short-stories"><img class="img-circle" src="short-stories.jpg.jpg"alt="Short Stories" border="4px solid black" width="200" height="200" /></a>
+	</div>
+	<div class="navigation">
+		<a href="index.html"><img src="home.PNG" border=0></a>
+		<a href="about.html"><img src="about.PNG" border=0></a>
+		<a href="comics.html"><img src="comics.PNG" border=0></a>
+		<a href="/contact.html"><img src="https://imgur.com/9DEaj9p.png" border=0></a> 
+		<!-- <a href="podcast.html"><img src="podcast.PNG" border=0></a>
+		<a href="follow.html"><img src="follow.PNG" border=0></a>
+		<a href="/support.html"><img src="" border=0></a> -->
+	</div>
 <div class="blog"><h3><span style="font-size:20px;">C</span>ONTACT <span style="font-size:20px;">A</span>RTHROPUNK<span style="font-size:20px;">:</span></h3><p>
 <b>The author:</b><br /><br /> 
 	
