--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
 		<a href="/support.html"><img src="" border=0></a> -->
 	</div>
 <div class="blog"><h3><span style="font-size:20px;">C</span>ONTACT <span style="font-size:20px;">A</span>RTHROPUNK<span style="font-size:20px;">:</span></h3><p>
-<b>The author:</b><br /><br /> 
+	<b>Email Me:</b><br /><br /> </div>
 	
 <!-- <div class="social-media">
 <a href="https://www.instagram.com/ghosts.of.the.masters/"><img class="social-media" src="ig.PNG" alt="instagram" height="150" width="150"/></a>
