--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@ Greetings! I am Vernon Meidlinger-Chin, writer and illustrator of "Arthropunk" a
 
 <br /><br /><br /><b>Contact:</b><br /><br /> 
 
-email: vmeidlinger (at) gmail (dot) com<br />twitter: (at) adventurevernon
+email: arthropunk (at) gmail (dot) com
 
 <br /><br /><br /><b>Frequently Asked Questions:</b><br /><br />
 <i>How did you come up with "Arthropunk"?</i><br /><br />When I was younger, I collected insects and post-punk records. Then one day, I was bitten by a radioactive comic book and Arthropunk was born.<br /><br />
