--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,11 @@
 	</div>
 <h1> </h1>
 <div class="blog"><h3><span style="font-size:20px;">C</span>ONTACT <span style="font-size:20px;">A</span>RTHROPUNK<span style="font-size:20px;">:</span></h3><p>
-	<b>Email Me:</b><br /><br /> </div>
+	<b>Email Me:</b><br /><br /> 
+
+email: arthropunk (at) gmail (dot) com
+
+<br /><br /><br /><b> </div>
 	
 <!-- <div class="social-media">
 <a href="https://www.instagram.com/ghosts.of.the.masters/"><img class="social-media" src="ig.PNG" alt="instagram" height="150" width="150"/></a>
