--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
 <div class="blog"><h3><span style="font-size:20px;">C</span>ONTACT <span style="font-size:20px;">A</span>RTHROPUNK<span style="font-size:20px;">:</span></h3><p>
 	<b>Email Me:</b><br /><br /> 
 
-email: arthropunk (at) gmail (dot) com
+	<a href="arthropunk@gmail.com">email: arthropunk (at) gmail (dot) com</a>
 
 <br /><br /><br /><b> </div>
 	
