--- a/contact.html
+++ b/contact.html
@@ -39,10 +39,14 @@
 <h1> </h1>
 <div class="blog"><h3><span style="font-size:20px;">C</span>ONTACT <span style="font-size:20px;">A</span>RTHROPUNK<span style="font-size:20px;">:</span></h3><p>
 	<b>Email Me:</b><br /><br /> 
-
-	<a href="arthropunk@gmail.com">email: arthropunk (at) gmail (dot) com</a>
-
-<br /><br /><br /><b> </div>
+	<a href="mailto:arthropunk@gmail.com">email: arthropunk (at) gmail (dot) com</a>
+<br /><br /><br />
+	<b>Buy Me A Coffee:</b><br /><br />
+	<a href="https://ko-fi.com/arthropunk">Ko-Fi: Arthropunk</a>
+<br /><br /><br />
+	<b>Support the Comic:</b><br /><br />
+	<a href="https://www.patreon.com/arthropunk">Patreon: Arthropunk</a><br /><br>
+		</div>
 	
 <!-- <div class="social-media">
 <a href="https://www.instagram.com/ghosts.of.the.masters/"><img class="social-media" src="ig.PNG" alt="instagram" height="150" width="150"/></a>
