--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,10 @@
 	<a href="https://ko-fi.com/arthropunk">Ko-Fi: Arthropunk</a>
 <br /><br /><br />
 	<b>Support the Comic:</b><br /><br />
-	<a href="https://www.patreon.com/arthropunk">Patreon: Arthropunk</a><br /><br>
+	<a href="https://www.patreon.com/arthropunk">Patreon: Arthropunk</a>
+<br /><br /><br />
+	<b>Enjoy My Music:</b><br /><br />
+	<a href="https://breadmakestoast.bandcamp.com">Bread Makes Toast</a><br /><br />
 		</div>
 	
 <!-- <div class="social-media">
