--- a/90s.html
+++ b/90s.html
@@ -28,7 +28,7 @@
    </div>
     <img src="90s.png" width="691" height="600"/><br />
     <a href="wap.html"><img src="prev.jpg" alt="previous" width="180px" height="48px"/></a>
-    <!-- <a href="comics.html"><img src="next.jpg" alt="next" width="135px" height="48px"/></a> -->
+    <a href="keith.html"><img src="next.jpg" alt="next" width="135px" height="48px"/></a>
  </center>
  <footer text-align="center"><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a>"Arthropunk" and all related properties by Vernon Meidlinger-Chin are licensed under a <a rel="license" 
 href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a></footer>
