--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	</div><table class="homepage"><tr>
 	<td style="text-align: right;"><h1></h1><a href="90s.html"><img src="newest.PNG" alt="NEWEST COMIC:" width="230px" height="50px"/></a><br/><br/><br/><a href="wap.html"><img src="prev.jpg" alt="previous" width="120px" height="32px"/></a><br/><br/><!-- <a href="all-my-friends-are-machines1.html"><img src="first.PNG" alt="first" width="70px" height="36px"/> --></a></td>
 <td>
-	<img src="90s.png" width="691" height="600"/>
+	<img src="baseball.png" width="800" height="600"/>
 </td></tr></table>
 	<div class="blog"><h3><span style="font-size: 20px;">W</span>ELCOME TO <span style="font-size: 20px;">A</span>RTHROPUNK</h3>
 	<p class="nomargin">
