--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		<a href="follow.html"><img src="follow.PNG" alt="follow" border=0></a>
 		<a href="/support.html"><img src="" border=0></a> -->
 	</div><table class="homepage"><tr>
-	<td style="text-align: right;"><h1></h1><a href="90s.html"><img src="newest.PNG" alt="NEWEST COMIC:" width="230px" height="50px"/></a><br/><br/><br/><a href="wap.html"><img src="prev.jpg" alt="previous" width="120px" height="32px"/></a><br/><br/><!-- <a href="all-my-friends-are-machines1.html"><img src="first.PNG" alt="first" width="70px" height="36px"/> --></a></td>
+	<td style="text-align: right;"><h1></h1><a href="baseball.html"><img src="newest.PNG" alt="NEWEST COMIC:" width="230px" height="50px"/></a><br/><br/><br/><a href="keith.html"><img src="prev.jpg" alt="previous" width="120px" height="32px"/></a><br/><br/><!-- <a href="all-my-friends-are-machines1.html"><img src="first.PNG" alt="first" width="70px" height="36px"/> --></a></td>
 <td>
 	<img src="baseball.png" width="800" height="600"/>
 </td></tr></table>
