--- a/greymon.html
+++ b/greymon.html
@@ -27,7 +27,7 @@
 	<a href="contact.html"><img src="https://imgur.com/9DEaj9p.png" border=0></a>
    </div>
     <img src="greymon.png" width="798" height="823"/><br />
-    <a href="birdwatching.html"><img src="prev.jpg" alt="previous" width="180px" height="48px"/></a>
+    <a href="hockey.html"><img src="prev.jpg" alt="previous" width="180px" height="48px"/></a>
     <!-- <a href="comics.html"><img src="next.jpg" alt="next" width="135px" height="48px"/></a> -->
  </center>
  <footer text-align="center"><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a>"Arthropunk" and all related properties by Vernon Meidlinger-Chin are licensed under a <a rel="license" 
