--- a/hockey.html
+++ b/hockey.html
@@ -27,8 +27,8 @@
 	<a href="contact.html"><img src="https://imgur.com/9DEaj9p.png" border=0></a>
    </div>
     <img src="hockey.png" width="800" height="236"/><br />
-    <a href="greymon.html"><img src="prev.jpg" alt="previous" width="180px" height="48px"/></a>
-    <!-- <a href="comics.html"><img src="next.jpg" alt="next" width="135px" height="48px"/></a> -->
+    <a href="birdwatching.html"><img src="prev.jpg" alt="previous" width="180px" height="48px"/></a>
+    <a href="greymon.html"><img src="next.jpg" alt="next" width="135px" height="48px"/></a>
  </center>
  <footer text-align="center"><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a>"Arthropunk" and all related properties by Vernon Meidlinger-Chin are licensed under a <a rel="license" 
 href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a></footer>
