--- a/comics.html
+++ b/comics.html
@@ -32,6 +32,7 @@
 	</div><h1 id="dalies">"<span style="font-size: 20px;">D</span>ailies"</h1>
 <table> <td><a><img src="dailies.jpg.jpg" width="250" height="250" border="1px solid black" /></a></td>
 	<td>Gags! Jokes! One-shot cartoons, some of which kind of tell a story<br><br><i>~page count:</i>
+		<br /> <a href="greymon.html">72 - Greymon</a> /<a href="hockey.html">71 - Hockey</a> /
 		<br /> <a href="birdwatching.html">70 - Bird Watching</a> /
 		<br /> <a href="baseball.html">69 - Baseball</a> / <a href="keith.html">68 - Keith</a> /
 		<br /> <a href="90s.html">67 - The 90s</a> / <a href="wap.html">66 - W.A.P.</a> / 
