--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 <body>
 	<center><div class="header">
 		<a href="comics.html#dailies"><img class="img-circle" src="dailies.jpg.jpg" alt="Dailies" border="4px solid black"  width="200" height="200" /></a>
-		<a href="comics.html#foucault"><img class="img-circle" src="foucault.jpg" alt="Foucault" border="4px solid black"  width="200" height="200" /></a>
-		<a href="comics.html#armstrong"><img class="img-circle" src="armstrong.png" alt="Neil Armstrong, Home from the Moon" border="4px solid black" width="200" height="200" /></a>
 		<a href="comics.html#intimacy"><img class="img-circle" src="intimacy.jpg" alt="Intimacy" border="4px solid black" width="200" height="200" /></a>
+		<a href="comics.html#foucault"><img class="img-circle" src="foucault.jpg" alt="Foucault" border="4px solid black"  width="200" height="200" /></a>
+		<a href="comics.html#freud"><img class="img-circle" src="freudicon.jpg" alt="And Now, A Word From Dr. Freud" border="4px solid black" width="200" height="200" /></a>
 		<a href="comics.html#short-stories"><img class="img-circle" src="short-stories.jpg.jpg"alt="Short Stories" border="4px solid black" width="200" height="200" /></a>
 	</div></center>
 	<div class="navigation"><center>
